# dann-specs

./: .gitignore  AGENTS.es.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  EXAMPLES.es.md  EXAMPLES.md  README.es.md  README.md  SKILL.md  eval-profile.json  evaluation-rubric.es.md  evaluation-rubric.md  pyproject.toml
.github/workflows/: release.yml  validate.yml
docs/: analysis.md
docs/reports/: README.md  index.html
mini/: core.es.md  core.md
reports/: generate-index.py  reports-index.json
roles/: accountant.md  architect.md  domain-specialist.md  educator.md  electronics-technician.md  graphic-designer.md  lawyer.md  mechanic.md  nurse.md  physician.es.md  physician.md  researcher.es.md  researcher.md  reviewer.es.md  reviewer.md  seamstress.md  security-auditor.md
scripts/: sync-translations.py
templates/new-project/: AGENTS.md  SESSION_LOG.md
tests/harness/: config.py
tests/harness/deprecated/: generate_test_cases.py  generate_tool_tests.py  test_runner.py
tests/suites/: conflict_resolution_30.json  core_principles_30.json  roles_30.json  rubric_30.json  tool_adapters_30.json
tools/aider/: CONVENTIONS.md
tools/claude/: CLAUDE.md
tools/cline/: .clinerules
tools/continue/.continue/rules/: dann-specs.md
tools/universal/: AGENTS.md
variants/data-analysis/: AGENTS.md
variants/education-courses/: AGENTS.md
variants/infra-devops/: AGENTS.es.md  AGENTS.md
variants/product-management/: AGENTS.md
variants/professional-services/: AGENTS.md
variants/research-knowledge/: AGENTS.md
variants/software-development/: AGENTS.es.md  AGENTS.md
(+1 files in other folders)
