[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dann-specs"
version = "2.1.0"
description = "Universal behavioral specification for AI agents"
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "python-semantic-release>=9.0",
]

[tool.semantic_release]
version_variables = [
    "pyproject.toml:project.version",
]
tag_format = "v{version}"
commit_message = "release: v{version} [skip ci]"
commit_parser = "conventional"
major_on_zero = false

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.changelog]
enabled = true
file = "CHANGELOG.md"

[tool.semantic_release.publish]
upload_to_vcs_release = true

[tool.semantic_release.remote]
name = "origin"
type = "github"
token = {env = "GH_TOKEN"}

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = false
